# nntpisnotdead

./: README.md  docker-compose.yml  init_db.sh
nserver/: Cargo.toml  example_config.toml
nserver/migrations/2023-09-11-064542_create_users/: down.sql  up.sql
nserver/src/: config.rs  main.rs  utils.rs
nserver/src/db/: mod.rs  models.rs  schema.rs
