[package]
name = "nserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
derive_more = "0.99.17"
diesel = { version = "2.1.1", features = ["chrono", "postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
env-file-reader = "0.3.0"
env_logger = "0.10.0"
log = "0.4.20"
num_cpus = "1.16.0"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
toml = "0.7.8"
